--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>CSS Color Markers</h1>
-    
+    <!--div is a block element so it need display:block-inline-->
     <div class="container">
       <div class="marker red">
         <div class="cap"></div>
