--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     <h1>CSS Color Markers</h1>
     <!--div is a block element so it need display:block-inline-->
+    <!--contain is a box block so it changes the background of the markers-->
+    <!--marker is the rectangle that holds the colors-->
+    <!--small portion of the marker rectangle there is a cap rectangle-->
+    <!--sleeve is even smaller block-->
     <div class="container">
       <div class="marker red">
         <div class="cap"></div>
